# itmo_courses

asm/memcpy/: CMakeLists.txt  main.cpp  memcpy_aligned.s  memcpy_asm.h
asm/trampoline/: CMakeLists.txt  arg_cnt.h  compile.py  main.cpp  trampoline.h  trampoline_source.h
asm/word_count/: CMakeLists.txt  main.cpp  word_count_aligned.s  word_count_asm.cpp  word_count_asm.h
math_logic/: README.md  pom.xml
math_logic/io/comparison/: output.txt
math_logic/io/predicate_calculus/: output.txt
math_logic/proofs/comparison/: common.txt  lemma_parenthesis.txt
math_logic/src/main/java/: compile.sh  compile3.sh
math_logic/src/main/java/check_derivation/: Axioms.java  Main.java  Parser.java  Tester.java  Validator.java
math_logic/src/main/java/check_derivation/expression/: BinExpression.java  Expression.java  Operator.java  UnExpression.java  Variable.java
math_logic/src/main/java/common/: Lists.java  Pair.java  Timer.java  Triple.java  Util.java
math_logic/src/main/java/comparison/: Main.java
math_logic/src/main/java/predicate_calculus/: Axioms.java  CheckResult.java  Deductor.java  Main.java  Parser.java  ParsingException.java  ProofInfo.java  ValidationResult.java  Validator.java
math_logic/src/main/java/predicate_calculus/expression/: AbstractExpression.java  BinExpression.java  BinPredicate.java  Const.java  Function.java  Inc.java  Named.java  (+5 more)
math_logic/src/test/java/comparison/: ComparisonTest.java
math_logic/src/test/java/predicate_calculus/: DeductorTest.java  ParserTest.java  TestAll.java  ValidatorTest.java
os/: README.md  conspect.md
(+1 files in other folders)
